@@ -1,4 +1,9 @@
 
+2011-February-04 Struan Robertson
+
+	* HinderedRotorCM1D.cpp: Approximate treatment of hindered rotor 
+	potential added.
+	* Makefile: Addition of HinderedRotorCM1D.cpp to build. 
 
 2011-January-30 Struan Robertson
 
